[package]
name = "slicism"
version = "1.0.0"
authors = ["Félix Saparelli <felix@passcod.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer-runtime = "0.15.0"
tide = "0.6.0"
toml = "0.5.6"
serde = "1.0.104"
async-std = "1.5.0"
serde_derive = "1.0.104"
regex = "1.3.4"
serde_regex = "0.4.0"
error-chain = "0.12.2"
log = "0.4.8"
dashmap = "3.5.1"
fern = "0.5.9"

