[package]
name = "slicism-server"
version = "1.0.0"
authors = ["Félix Saparelli <felix@passcod.name>"]
edition = "2018"

[dependencies]
async-std = "1.5.0"
crossbeam = "0.7.3"
dashmap = "3.5.1"
error-chain = "0.12.2"
fern = "0.6.0"
futures = "0.3.4"
http-service = "0.4.0"
humantime-serde = "1.0.0"
indexmap = "1.3.2"
log = "0.4.8"
num-derive = "0.3.0"
num-traits = "0.2.11"
regex = "1.3.4"
rmp-serde = "0.14.3"
serde = "1.0.104"
serde_cbor = "0.11.1"
serde_derive = "1.0.104"
serde_json = "1.0.48"
serde_regex = "0.4.0"
tide = "0.6.0"
toml = "0.5.6"
wasmer-runtime = { git = "https://github.com/wasmerio/wasmer" }
wasmer-runtime-core = { git = "https://github.com/wasmerio/wasmer" }
